--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,48 +1,169 @@
 .modal {
+  font-family: "Inter", Arial, sans-serif;
+  align-items: center;
+  justify-content: center;
+  visibility: none;
+  opacity: 0;
+  pointer-events: none;
+  transition: visibility 0s 0.5s, opacity 0.5s linear;
   position: fixed;
-  z-index: 999;
+  display: flex;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.50);
-  /* display: flex; */
-  justify-content: center;
-  align-items: center;
-  padding: 0 19px;
-  display: none;
+
+
 }
 
 .modal_opened {
-  display: flex;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: all;
+  transition: visibility 0s, opacity 0.5s linear;
+
+
+
 }
 
 .modal__container {
   background-color: white;
   border-radius: 10px;
-  margin: auto;
-  padding: 36px;
+  width: 430px;
+  height: 330px;
+  margin: 0 auto;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   position: relative;
+
+
 }
 
-.modal__close {
-  background-image: url(../images/Close\ Icon.svg);
-  position: absolute;
-  bottom: calc(100% + 5px);
-  left: calc(100% + 5px);
-  cursor: pointer;
-  border: none;
+.modal__container-transparent {
   background-color: transparent;
-  outline: none;
-  width: 40px;
-  height: 40px;
-  font-size: 18px;
-  background-repeat: no-repeat;
-  background-size: contain;
+  height: auto;
+  width: auto;
+  max-height: 75vh;
+  max-width: 75vw;
+  display: flex;
 
 }
 
-.modal__heading {
-  /* color: #000; */
-  color: rgba(0, 0, 0, 1);
+
+
+.modal__close-button {
+  background: url(../images/Close\ Icon.svg)center no-repeat;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  border: 0;
+  cursor: pointer;
+  display: flex;
+
+
+}
+
+
+.modal__close-button:hover {
+  opacity: 0.6;
+}
+
+.modal__title {
+  font-weight: 900;
+  line-height: 29.05px;
+  font-size: 24px;
+  font-style: normal;
+  color: #000000;
+
+  padding-left: 36px;
+  width: 330px;
+
+}
+
+
+.modal__input {
+  border: 0;
+  flex-direction: column;
+  display: flex;
+  width: 358px;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #000000;
+  font-style: normal;
+  line-height: 17px;
+
+
+}
+
+
+.modal__input-line {
+  margin-bottom: 29.74px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 13px 0;
+  opacity: 1;
+  align-self: center;
+}
+
+.modal__input-description {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 13px 0;
+  opacity: 1;
+  align-self: center;
+
+}
+
+
+.modal__save-button {
+  background: #000000;
+  width: 358px;
+  height: 50.15px;
+  border-radius: 2px;
+  cursor: pointer;
+  color: white;
+  font-size: 18px;
+  font-style: normal;
+  position: absolute;
+  bottom: 0;
+  align-self: center;
+  /* margin-bottom: 25px; */
+  margin-bottom: 36.51px;
+  border: none;
+
+
+}
+
+.modal__save-button:hover {
+  opacity: 0.8;
+}
+
+.modal__form {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__image {
+  max-width: 100%;
+  object-fit: cover
+    /*  margin: 0 auto; */
+
+}
+
+.modal__text {
+  font-family: "Inter", Arial, sans-serif;
+  color: #ffffff;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 12px;
+  top: calc(100% + 15px);
+  position: absolute;
+  line-height: 14.52px;
+  margin: 0;
+
+
+
+
 }
