modal and profile description in html and jss

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -97,7 +97,7 @@
 }
 
 
-.modal__input-line {
+.profile__input-title {
   margin-bottom: 29.74px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   padding: 13px 0;
@@ -105,7 +105,7 @@
   align-self: center;
 }
 
-.modal__input-description {
+.profile__input-description {
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   padding: 13px 0;
   opacity: 1;
