--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -33,6 +33,22 @@
 
 }
 
+.profile__input-title {
+  margin-bottom: 29.74px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 13px 0;
+  opacity: 1;
+  align-self: center;
+}
+
+.profile__input-description {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 13px 0;
+  opacity: 1;
+  align-self: center;
+
+}
+
 .profile__edit-button :hover {
   opacity: 0.6;
 
@@ -81,6 +97,22 @@
   height: 22px;
   margin-top: 16px;
 
+
+}
+
+.profile__input-title {
+  margin-bottom: 29.74px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 13px 0;
+  opacity: 1;
+  align-self: center;
+}
+
+.profile__input-description {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 13px 0;
+  opacity: 1;
+  align-self: center;
 
 }
 
