added new modal New place and fixed js and html to represent this

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,3 +1,4 @@
+/* Existing modal styles */
 .modal {
   font-family: "Inter", Arial, sans-serif;
   align-items: center;
@@ -13,8 +14,6 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.50);
-
-
 }
 
 .modal_opened {
@@ -22,9 +21,6 @@
   opacity: 1;
   pointer-events: all;
   transition: visibility 0s, opacity 0.5s linear;
-
-
-
 }
 
 .modal__container {
@@ -35,21 +31,7 @@
   margin: 0 auto;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   position: relative;
-
-
 }
-
-.modal__container-transparent {
-  background-color: transparent;
-  height: auto;
-  width: auto;
-  max-height: 75vh;
-  max-width: 75vw;
-  display: flex;
-
-}
-
-
 
 .modal__close-button {
   background: url(../images/Close\ Icon.svg)center no-repeat;
@@ -60,16 +42,13 @@
   right: -40px;
   border: 0;
   cursor: pointer;
-  display: flex;
-
-
 }
-
 
 .modal__close-button:hover {
   opacity: 0.6;
 }
 
+/* Modal Title */
 .modal__title {
   font-weight: 900;
   line-height: 29.05px;
@@ -83,24 +62,21 @@
   overflow: hidden;
 }
 
-
+/* Input fields (updated for name and description) */
 .modal__input {
   border: 0;
-  flex-direction: column;
   display: flex;
   width: 358px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #000000;
-  font-style: normal;
-  line-height: 17px;
-
-
+  padding: 13px 0;
+  margin-bottom: 29.74px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
-
-.profile__title-input {
+.modal__name-input {
   margin-bottom: 29.74px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   padding: 13px 0;
@@ -108,14 +84,12 @@
   align-self: center;
 }
 
-.profile__description-input {
+.modal__description-input {
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   padding: 13px 0;
   opacity: 1;
   align-self: center;
-
 }
-
 
 .modal__save-button {
   background: #000000;
@@ -125,15 +99,11 @@
   cursor: pointer;
   color: white;
   font-size: 18px;
-  font-style: normal;
   position: absolute;
   bottom: 0;
   align-self: center;
-  /* margin-bottom: 25px; */
   margin-bottom: 36.51px;
   border: none;
-
-
 }
 
 .modal__save-button:hover {
@@ -146,25 +116,34 @@
   flex-direction: column;
 }
 
-.modal__image {
-  max-width: 100%;
-  object-fit: cover
-    /*  margin: 0 auto; */
+/* New modal for adding cards */
 
+/* Input fields for card title and URL */
+.modal__title-input,
+.modal__url-input {
+  width: 358px;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  color: #000000;
+  padding: 13px 0;
+  margin-bottom: 29.74px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
 
-.modal__text {
-  font-family: "Inter", Arial, sans-serif;
-  color: #ffffff;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 12px;
-  top: calc(100% + 15px);
-  position: absolute;
-  line-height: 14.52px;
-  margin: 0;
+/* Add any additional styling for title and URL inputs if needed */
+.modal__title-input {
+  margin-bottom: 29.74px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 13px 0;
+  opacity: 1;
+  align-self: center;
+}
 
-
-
+.modal__url-input {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  padding: 13px 0;
+  opacity: 1;
+  align-self: center;
 
 }
