--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,6 +6,7 @@
   color: black;
   width: 282px;
   height: 361px;
+  position: relative;
 }
 
 .card__image {
@@ -59,17 +60,17 @@
 }
 
 .card__trash-button {
-  background: center no-repeat;
+  background: transparent url(../images/Trash.svg) center no-repeat;
   position: absolute;
   border: none;
   transition: 0.8s;
-  top: 70px;
-  right: 16px;
+  top: 10px;
+  /* Adjust this as needed */
+  right: 10px;
+  /* Adjust this as needed */
   cursor: pointer;
 }
 
-
-
-.card__trash-button :hover {
+.card__trash-button:hover {
   opacity: 0.5;
 }
