--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -3,7 +3,7 @@
   font-family: "Inter", Arial, sans-serif;
   align-items: center;
   justify-content: center;
-  visibility: none;
+  visibility: hidden;
   opacity: 0;
   pointer-events: none;
   transition: visibility 0s 0.5s, opacity 0.5s linear;
@@ -145,6 +145,13 @@
   padding: 13px 0;
   opacity: 1;
   align-self: center;
+
+}
+
+.modal__image {
+  max-width: 100%;
+  object-fit: cover
+    /*  margin: 0 auto; */
 
 }
 
