--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -155,6 +155,13 @@
 
 }
 
+.modal__text {
+  font-size: 18px;
+  color: black;
+  margin-top: 10px;
+  text-align: center;
+}
+
 @media screen and (max-width: 620px) {
   .modal {
     justify-content: center;
