--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -147,8 +147,8 @@
 
   .profile__edit-button {
     margin-left: 10px;
-    width: 18px;
-    height: 18px;
+    /* width: 18px;
+    height: 18px; */
     margin-top: 0;
   }
 
