--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -250,9 +250,9 @@
 
 
   .modal__form {
-    /* grid-gap: 10px;
-        /* margin-top: 75px;  */
-    margin-top: 40px;
+
+    padding-top: 20px;
+
 
   }
 
